--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body>
     <div id="wrap">
-        <h1>숫자 만들기 게임!</h1>
-        <div id="result_area">결과가 나온다</div>
-        <input type="number" id="user_input">
-        <button id="play_button">Go!</button>
+        <div class="game">
+        <h1>number Guess game!</h1>
+        <div id="result_img">
+            <img src="img/papa_answerme.png" alt="정답을알려줘이미지">
+        </div>
+        <div id="result_area"></div>
+        <div id="chance_area">남은 기회는 3번입니다</div>
+        <div class="input_area">
+            <input type="number" id="user_input">
+        </div>
+        <div class="button_area">
+            <button id="play_button">Go!</button>
+        <button id="reset_button">reset</button>
+        </div>
+        <div id="answer_area">정답 : </div>
+    </div>
     </div>
     <script src="main.js"></script>
 </body>
